--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           platform: linux/arm64 
           version: ${{ github.event_name == 'release' && github.ref_name || format('0.0.0-{0}.{1}', github.ref_name, github.run_number) }} # <-- see 'Versioning' section below for explanation
           key-id: ${{ secrets.viam_key_id }}
-          key-value: ${{ secrets.viam_key_value }
+          key-value: ${{ secrets.viam_key_value }}
       - uses: viamrobotics/upload-module@v1
         if: github.event_name == 'release'
         with:
@@ -33,7 +33,7 @@ jobs:
           platform: darwin/arm64 
           version: ${{ github.event_name == 'release' && github.ref_name || format('0.0.0-{0}.{1}', github.ref_name, github.run_number) }} # <-- see 'Versioning' section below for explanation
           key-id: ${{ secrets.viam_key_id }}
-          key-value: ${{ secrets.viam_key_value }
+          key-value: ${{ secrets.viam_key_value }}
       - uses: viamrobotics/upload-module@v1
         if: github.event_name == 'release'
         with:
@@ -41,4 +41,4 @@ jobs:
           platform: darwin/amd64 
           version: ${{ github.event_name == 'release' && github.ref_name || format('0.0.0-{0}.{1}', github.ref_name, github.run_number) }} # <-- see 'Versioning' section below for explanation
           key-id: ${{ secrets.viam_key_id }}
-          key-value: ${{ secrets.viam_key_value }
+          key-value: ${{ secrets.viam_key_value }}
