--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,16 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
+      - name: get_artifacts
+      - uses: dsaltares/fetch-gh-release-asset@master
+        with:
+          repo: shawnbmccarthy/viam-web-demo
+          version: tags/v0.0.1
+          file: v0.0.1.tar.gz
+          target: web-src.tar.gz
       - uses: actions/checkout@v3
       - name: build
-        run: tar -czf module.tar.gz main.py requirements.txt run.sh components 
+        run: tar -czf module.tar.gz main.py requirements.txt run.sh components web-src.tar.gz
       - uses: viamrobotics/upload-module@v1
         if: github.event_name == 'release'
         with:
