--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,8 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: dsaltares/fetch-gh-release-asset@master
       - name: get_artifacts
+        uses: dsaltares/fetch-gh-release-asset@master
         with:
           repo: shawnbmccarthy/viam-web-demo
           version: tags/v0.0.1
