--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,44 +8,44 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: get_artifacts
-        uses: dsaltares/fetch-gh-release-asset@master
+      - uses: dsaltares/fetch-gh-release-asset@master
         with:
           repo: shawnbmccarthy/viam-web-demo
           version: tags/v0.0.1
           file: v0.0.1.tar.gz
           target: web-src.tar.gz
-      - uses: actions/checkout@v3
-      - name: build
-        run: tar -czf module.tar.gz main.py requirements.txt run.sh components web-src.tar.gz
-      - uses: viamrobotics/upload-module@v1
-        if: github.event_name == 'release'
-        with:
-          module-path: module.tar.gz
-          platform: linux/amd64 
-          version: ${{ github.event_name == 'release' && github.ref_name || format('0.0.0-{0}.{1}', github.ref_name, github.run_number) }} # <-- see 'Versioning' section below for explanation
-          key-id: ${{ secrets.viam_key_id }}
-          key-value: ${{ secrets.viam_key_value }}
-      - uses: viamrobotics/upload-module@v1
-        if: github.event_name == 'release'
-        with:
-          module-path: module.tar.gz
-          platform: linux/arm64 
-          version: ${{ github.event_name == 'release' && github.ref_name || format('0.0.0-{0}.{1}', github.ref_name, github.run_number) }} # <-- see 'Versioning' section below for explanation
-          key-id: ${{ secrets.viam_key_id }}
-          key-value: ${{ secrets.viam_key_value }}
-      - uses: viamrobotics/upload-module@v1
-        if: github.event_name == 'release'
-        with:
-          module-path: module.tar.gz
-          platform: darwin/arm64 
-          version: ${{ github.event_name == 'release' && github.ref_name || format('0.0.0-{0}.{1}', github.ref_name, github.run_number) }} # <-- see 'Versioning' section below for explanation
-          key-id: ${{ secrets.viam_key_id }}
-          key-value: ${{ secrets.viam_key_value }}
-      - uses: viamrobotics/upload-module@v1
-        if: github.event_name == 'release'
-        with:
-          module-path: module.tar.gz
-          platform: darwin/amd64 
-          version: ${{ github.event_name == 'release' && github.ref_name || format('0.0.0-{0}.{1}', github.ref_name, github.run_number) }} # <-- see 'Versioning' section below for explanation
-          key-id: ${{ secrets.viam_key_id }}
-          key-value: ${{ secrets.viam_key_value }}
+#      - uses: actions/checkout@v3
+#      - name: build
+#        run: tar -czf module.tar.gz main.py requirements.txt run.sh components web-src.tar.gz
+#      - uses: viamrobotics/upload-module@v1
+#        if: github.event_name == 'release'
+#        with:
+#          module-path: module.tar.gz
+#          platform: linux/amd64 
+#          version: ${{ github.event_name == 'release' && github.ref_name || format('0.0.0-{0}.{1}', github.ref_name, github.run_number) }} # <-- see 'Versioning' section below for explanation
+#          key-id: ${{ secrets.viam_key_id }}
+#          key-value: ${{ secrets.viam_key_value }}
+#      - uses: viamrobotics/upload-module@v1
+#        if: github.event_name == 'release'
+#        with:
+#          module-path: module.tar.gz
+#          platform: linux/arm64 
+#          version: ${{ github.event_name == 'release' && github.ref_name || format('0.0.0-{0}.{1}', github.ref_name, github.run_number) }} # <-- see 'Versioning' section below for explanation
+#          key-id: ${{ secrets.viam_key_id }}
+#          key-value: ${{ secrets.viam_key_value }}
+#      - uses: viamrobotics/upload-module@v1
+#        if: github.event_name == 'release'
+#        with:
+#          module-path: module.tar.gz
+#          platform: darwin/arm64 
+#          version: ${{ github.event_name == 'release' && github.ref_name || format('0.0.0-{0}.{1}', github.ref_name, github.run_number) }} # <-- see 'Versioning' section below for explanation
+#          key-id: ${{ secrets.viam_key_id }}
+#          key-value: ${{ secrets.viam_key_value }}
+#      - uses: viamrobotics/upload-module@v1
+#        if: github.event_name == 'release'
+#        with:
+#          module-path: module.tar.gz
+#          platform: darwin/amd64 
+#          version: ${{ github.event_name == 'release' && github.ref_name || format('0.0.0-{0}.{1}', github.ref_name, github.run_number) }} # <-- see 'Versioning' section below for explanation
+#          key-id: ${{ secrets.viam_key_id }}
+#          key-value: ${{ secrets.viam_key_value }}
