--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,10 @@ jobs:
       - name: get_artifacts
       - uses: dsaltares/fetch-gh-release-asset@master
         with:
-          repo: shawnbmccarthy/viam-web-demo
-          version: tags/v0.0.1
-          file: v0.0.1.tar.gz
-          target: web-src.tar.gz
+          repo: 'shawnbmccarthy/viam-web-demo'
+          version: 'tags/v0.0.1'
+          file: 'v0.0.1.tar.gz'
+          target: 'web-src.tar.gz'
 #      - uses: actions/checkout@v3
 #      - name: build
 #        run: tar -czf module.tar.gz main.py requirements.txt run.sh components web-src.tar.gz
