--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: get_artifacts
-      - uses: dsaltares/fetch-gh-release-asset@master
+        uses: dsaltares/fetch-gh-release-asset@master
         with:
           repo: 'shawnbmccarthy/viam-web-demo'
           version: 'v0.0.1'
