--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,8 @@ jobs:
         uses: dsaltares/fetch-gh-release-asset@master
         with:
           repo: 'shawnbmccarthy/viam-web-demo'
-          version: 'v0.0.1'
-          file: 'v0.0.1.tar.gz'
+          version: 'latest'
+          file: 'latest.tar.gz'
           target: 'web-src.tar.gz'
 #      - uses: actions/checkout@v3
 #      - name: build
