--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           repo: 'shawnbmccarthy/viam-web-demo'
           version: 'latest'
-          file: 'latest.tar.gz'
+          file: 'v0.0.1.tar.gz'
           target: 'web-src.tar.gz'
 #      - uses: actions/checkout@v3
 #      - name: build
