--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,12 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: get_artifacts
-        uses: dsaltares/fetch-gh-release-asset@master
-        with:
-          repo: 'shawnbmccarthy/viam-web-demo'
-          version: 'latest'
-          file: 'v0.0.1.tar.gz'
-          target: 'web-src.tar.gz'
+        run: wget https://github.com/shawnbmccarthy/viam-web-demo/archive/refs/tags/v0.0.1.tar.gz
 #      - uses: actions/checkout@v3
 #      - name: build
 #        run: tar -czf module.tar.gz main.py requirements.txt run.sh components web-src.tar.gz
