--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,14 +8,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: set_web_app_install_dir
-        run: echo "export WEB_APP_INSTALL_DIR=/opt" > ./web_vars.sh
+        run: echo "export WEB_APP_INSTALL_DIR=/opt" > /tmp/web_vars.sh
       - name: get_artifacts
         if: github.event_name == 'release'
-        run: wget https://github.com/shawnbmccarthy/viam-web-demo/archive/refs/tags/${{github.ref_name}}.tar.gz -O web-app.tar.gz
+        run: wget https://github.com/shawnbmccarthy/viam-web-demo/archive/refs/tags/${{github.ref_name}}.tar.gz -O /tmp/web-app.tar.gz
       - uses: actions/checkout@v3
       - name: build
         if: github.event_name == 'release'
-        run: tar -czf module.tar.gz main.py requirements.txt run.sh components web_vars.sh web-app.tar.gz
+        run: mv ../web_* . && tar -czf module.tar.gz main.py requirements.txt run.sh components web_vars.sh web-app.tar.gz
       - uses: viamrobotics/upload-module@v1
         if: github.event_name == 'release'
         with:
